Table refactor code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -324,7 +324,6 @@
     <label style="color: black; font-size: larger;">{{ number === 0 ? "" : number }}</label>
   </div>
   
-  <!-- Table -->
   <div class="card-container">
     <table>
       <thead>
@@ -337,260 +336,12 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(1) === undefined ? 'grey' : 'red' }">
-            1
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(16) === undefined ? 'grey' : 'red' }">
-            16
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(31) === undefined ? 'grey' : 'red' }">
-            31
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(46) === undefined ? 'grey' : 'red' }">
-            46
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(61) === undefined ? 'grey' : 'red' }">
-            61
-          </td>
-        </tr>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(2) === undefined ? 'grey' : 'red' }">
-            2
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(17) === undefined ? 'grey' : 'red' }">
-            17
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(32) === undefined ? 'grey' : 'red' }">
-            32
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(47) === undefined ? 'grey' : 'red' }">
-            47
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(62) === undefined ? 'grey' : 'red' }">
-            62
-          </td>
-        </tr>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(3) === undefined ? 'grey' : 'red' }">
-            3
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(18) === undefined ? 'grey' : 'red' }">
-            18
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(33) === undefined ? 'grey' : 'red' }">
-            33
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(48) === undefined ? 'grey' : 'red' }">
-            48
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(63) === undefined ? 'grey' : 'red' }">
-            63
-          </td>
-        </tr>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(4) === undefined ? 'grey' : 'red' }">
-            4
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(19) === undefined ? 'grey' : 'red' }">
-            19
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(34) === undefined ? 'grey' : 'red' }">
-            34
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(49) === undefined ? 'grey' : 'red' }">
-            49
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(64) === undefined ? 'grey' : 'red' }">
-            64
-          </td>
-        </tr>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(5) === undefined ? 'grey' : 'red' }">
-            5
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(20) === undefined ? 'grey' : 'red' }">
-            20
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(35) === undefined ? 'grey' : 'red' }">
-            35
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(50) === undefined ? 'grey' : 'red' }">
-            50
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(65) === undefined ? 'grey' : 'red' }">
-            65
-          </td>
-        </tr>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(6) === undefined ? 'grey' : 'red' }">
-            6
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(21) === undefined ? 'grey' : 'red' }">
-            21
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(36) === undefined ? 'grey' : 'red' }">
-            36
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(51) === undefined ? 'grey' : 'red' }">
-            51
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(66) === undefined ? 'grey' : 'red' }">
-            66
-          </td>
-        </tr>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(7) === undefined ? 'grey' : 'red' }">
-            7
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(22) === undefined ? 'grey' : 'red' }">
-            22
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(37) === undefined ? 'grey' : 'red' }">
-            37
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(52) === undefined ? 'grey' : 'red' }">
-            52
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(67) === undefined ? 'grey' : 'red' }">
-            67
-          </td>
-        </tr>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(8) === undefined ? 'grey' : 'red' }">
-            8
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(23) === undefined ? 'grey' : 'red' }">
-            23
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(38) === undefined ? 'grey' : 'red' }">
-            38
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(53) === undefined ? 'grey' : 'red' }">
-            53
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(68) === undefined ? 'grey' : 'red' }">
-            68
-          </td>
-        </tr>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(9) === undefined ? 'grey' : 'red' }">
-            9
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(24) === undefined ? 'grey' : 'red' }">
-            24
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(39) === undefined ? 'grey' : 'red' }">
-            39
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(54) === undefined ? 'grey' : 'red' }">
-            54
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(69) === undefined ? 'grey' : 'red' }">
-            69
-          </td>
-        </tr>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(10) === undefined ? 'grey' : 'red' }">
-            10
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(25) === undefined ? 'grey' : 'red' }">
-            25
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(40) === undefined ? 'grey' : 'red' }">
-            40
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(55) === undefined ? 'grey' : 'red' }">
-            55
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(70) === undefined ? 'grey' : 'red' }">
-            70
-          </td>
-        </tr>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(11) === undefined ? 'grey' : 'red' }">
-            11
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(26) === undefined ? 'grey' : 'red' }">
-            26
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(41) === undefined ? 'grey' : 'red' }">
-            41
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(56) === undefined ? 'grey' : 'red' }">
-            56
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(71) === undefined ? 'grey' : 'red' }">
-            71
-          </td>
-        </tr>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(12) === undefined ? 'grey' : 'red' }">
-            12
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(27) === undefined ? 'grey' : 'red' }">
-            27
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(42) === undefined ? 'grey' : 'red' }">
-            42
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(57) === undefined ? 'grey' : 'red' }">
-            57
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(72) === undefined ? 'grey' : 'red' }">
-            72
-          </td>
-        </tr>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(13) === undefined ? 'grey' : 'red' }">
-            13
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(28) === undefined ? 'grey' : 'red' }">
-            28
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(43) === undefined ? 'grey' : 'red' }">
-            43
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(58) === undefined ? 'grey' : 'red' }">
-            58
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(73) === undefined ? 'grey' : 'red' }">
-            73
-          </td>
-        </tr>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(14) === undefined ? 'grey' : 'red' }">
-            14
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(29) === undefined ? 'grey' : 'red' }">
-            29
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(44) === undefined ? 'grey' : 'red' }">
-            44
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(59) === undefined ? 'grey' : 'red' }">
-            59
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(74) === undefined ? 'grey' : 'red' }">
-            74
-          </td>
-        </tr>
-        <tr>
-          <td [ngStyle]="{ 'color': searchArray(15) === undefined ? 'grey' : 'red' }">
-            15
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(30) === undefined ? 'grey' : 'red' }">
-            30
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(45) === undefined ? 'grey' : 'red' }">
-            45
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(60) === undefined ? 'grey' : 'red' }">
-            60
-          </td>
-          <td [ngStyle]="{ 'color': searchArray(75) === undefined ? 'grey' : 'red' }">
-            75
-          </td>
+        <tr *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12,13, 14 ,15]">
+          <td [ngStyle]="{ 'color': searchArray(i) === undefined ? 'grey' : 'red' }">{{ i }}</td>
+          <td [ngStyle]="{ 'color': searchArray(i + 15) === undefined ? 'grey' : 'red' }">{{ i + 15 }}</td>
+          <td [ngStyle]="{ 'color': searchArray(i + 30) === undefined ? 'grey' : 'red' }">{{ i + 30 }}</td>
+          <td [ngStyle]="{ 'color': searchArray(i + 45) === undefined ? 'grey' : 'red' }">{{ i + 45 }}</td>
+          <td [ngStyle]="{ 'color': searchArray(i + 60) === undefined ? 'grey' : 'red' }">{{ i + 60 }}</td>
         </tr>
       </tbody>
     </table>
