--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -337,7 +337,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12,13, 14 ,15]">
+        <tr *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ,14, 15]">
           <td [ngStyle]="{ 'color': searchArray(i) === undefined ? 'grey' : 'red' }">{{ i }}</td>
           <td [ngStyle]="{ 'color': searchArray(i + 15) === undefined ? 'grey' : 'red' }">{{ i + 15 }}</td>
           <td [ngStyle]="{ 'color': searchArray(i + 30) === undefined ? 'grey' : 'red' }">{{ i + 30 }}</td>
