Update .gitignore file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -309,7 +309,7 @@
       </g>
     </svg>
 
-    <span>Bienvenido a {{ title }}</span>
+    <span>Welcome to {{ title }}</span>
 
   </div>
 
@@ -343,7 +343,7 @@
   </div>
   
   <div class="container">
-    <table class="table  table-striped">
+    <table class="table  table-striped bg-white">
       <thead>
         <tr>
           <th>B</th>
