--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -331,7 +331,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col">
-        <label style="color: black; font-size: larger;">{{ letter }}</label>
+        <label style="color: black; font-size: larger;">{{ letterSelected }}</label>
       </div>
       <div class="col"></div>
       <div class="col">
